# prepwise

./: .commitlog  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
backend/: config.py  main.py
backend/api/routes/: health.py  parse.py  prepare.py
backend/chains/: answer_coach.py  guide_assembler.py  job_analyzer.py  question_generator.py  technical_prep.py
backend/models/: guide.py  requests.py  responses.py
backend/prompts/: answer_frameworks.py  behavioral_questions.py  job_analysis.py  study_guide.py  technical_questions.py
backend/services/: email_sender.py  generator.py  parser.py  template_renderer.py
backend/templates/: email_guide.html  email_guide.txt
backend/tests/: test_models.py  test_parser.py
frontend/: index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: guide-preview.tsx  prep-form.tsx  progress-tracker.tsx  url-parser.tsx
frontend/src/lib/: api.ts
frontend/src/styles/: globals.css
