[project]
name = "prepwise"
version = "0.1.0"
description = "AI-powered interview preparation guide generator"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "jinja2>=3.1.0",
    "resend>=2.0.0",
    "sse-starlette>=2.0.0",
    "slowapi>=0.1.9",
]
[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0", "ruff>=0.6.0"]
[tool.ruff]
target-version = "py312"
line-length = 100
